feat: register and view travel routes
